Fix invisible menu button introduced by c2ae145b9

--- a/app/assets/stylesheets/_base-customized.css.scss
+++ b/app/assets/stylesheets/_base-customized.css.scss
@@ -109,3 +109,22 @@ table {
 table.dataTable thead > tr > th {
   padding-right: 5px;
 }
+
+.navbar {
+  overflow: hidden;
+}
+
+@media (max-width: 400px) {
+  .navbar-brand {
+    font-size: 16px;
+  }
+}
+
+.navbar-toggle {
+  background-color: rgba(154, 220, 255, 0.05);
+  border: 1px solid rgba(142, 200, 250, 0.63);
+}
+
+.icon-bar {
+  background: rgba(0,0,0,1);
+}
