--- a/app/assets/stylesheets/_bootstrap_custom.css.scss
+++ b/app/assets/stylesheets/_bootstrap_custom.css.scss
@@ -8,7 +8,7 @@
 
 $font-size-base: 18px;
 $headings-font-weight: 700;
-$navbar-height: 40px;
+/*$navbar-height: 40px;*/
 
 
 // Core variables and mixins
